syntax = "proto3";

package temporal.icayieldmos;

import "gogoproto/gogo.proto";
import "temporal/icayieldmos/params.proto";

option go_package = "github.com/Temporal-Network/temporal/x/icayieldmos/types";

// GenesisState defines the icayieldmos module's genesis state.
message GenesisState {
  Params params  = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
}

